# clawdbot-health-dashboard

./: .gitignore  AGENTS.md  CHANGELOG.md  Dockerfile  GOALS.md  HEARTBEAT.md  IDENTITY.md  MEMORY.md  QUICKREF.md  README.md  SECURITY.md  SOUL.md  SYNCTHING_SETUP.md  TOOLS.md  USER.md  award-winning-websites-research.md  deploy.sh  design-mastery.md  design-research.md  master-design-prompt.md  master-website-prompt.md  monetization-plan.md  neuron.html  package-lock.json  package.json  railway.toml  ui-design-rules.md  vercel.json
.cache/: btc-4h-ema-results.json  btc-4h-ema-slope-results.json  btc-4h-hybrid-results.json  btc-backtest-results.json  btc-backtest-v2-results.json  btc-deep-research.json  btc-optimizer-results.json  btc-signal-state.json  btc-strategy-lab-results.json
.data/: followups.json
agents/: coder-system.md  researcher-system.md  reviewer-system.md
api/: system-metrics.mjs
data/: portfolio-degen.json  portfolio.json
ideas/: IDEAS.md
learnings/: LEARNINGS.md
memory/: 2026-01-24.md  2026-01-25.md  2026-01-26.md  2026-01-27.md  2026-01-28.md  2026-01-29.md  2026-01-30.md  2026-01-31.md  2026-02-01.md  2026-02-02.md  2026-02-03.md  2026-02-04.md  2026-02-05.md  2026-02-06.md  2026-02-07.md  2026-02-08-morning.md  2026-02-08.md  2026-02-09.md  2026-02-10.md  2026-02-11.md  2026-02-12.md  2026-02-13.md  2026-02-14.md  2026-02-15.md  (+48 more)
projects/context-memory/sdk-python/: README.md  pyproject.toml
projects/context-memory/sdk-python/ctxmem/: __init__.py  client.py  exceptions.py
projects/context-memory/sdk-python/tests/: test_client.py
(+388 files in other folders)
