[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ctxmem"
version = "0.1.0"
description = "Python SDK for Context Memory — persistent memory for AI workflows"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Ventok", email = "hello@ventok.dev" }
]
keywords = ["ai", "memory", "context", "llm", "chatgpt", "claude", "agents"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "httpx>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "respx>=0.20",
]

[project.urls]
Homepage = "https://ctxmem.dev"
Documentation = "https://docs.ctxmem.dev"
Repository = "https://github.com/ventok/context-memory"

[tool.hatch.build.targets.wheel]
packages = ["ctxmem"]
